# src/Controller/CustomerController.php
@@ -22,14 +22,14 @@ class CustomerController extends AbstractController
      *     @OA\Response(
      *          response="200",
      *          description="Liste des clients",
-     *          @OA\JsonContent(type="array", @Items(ref="#/components/schemas/Customer")),
-     *     )
+     *          @OA\JsonContent(type="array", @Items(ref="#/components/schemas/Customer"))
+     *     ),
      *     @OA\Response(response=404, description="La ressource n'existe pas"),
-     *     @OA\Response(response=401, description="Jeton d'authentification invalide")
+     *     @OA\Response(response=401, description="Jeton d'authentification invalide"),
      *     @OA\Response(response=403, description="L'accès à cette page ne vous est pas autorisé")
      * )
      */
-    public function index(CustomerRepository $customerRepository, NormalizerInterface $normalizer): Response
+    public function __invoke(CustomerRepository $customerRepository, NormalizerInterface $normalizer): Response
     {
         $customers = $customerRepository->findBy(['user' => $this->getUser()]);
         $response = $normalizer->normalize($customers, 'array', [AbstractNormalizer::GROUPS => ['customerList', Phone::GROUP_DETAIL]]);
