# swagger/swagger.yaml
@@ -6,7 +6,144 @@ servers:
   -
     url: 'http://localhost:8000/swagger'
     description: 'API for Bilemo''s Project'
+paths:
+  '/customers/{id}':
+    delete:
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'ID du client'
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: 'Suppression d''un client'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Customer'
+        '404':
+          description: 'La ressource n''existe pas'
+        '401':
+          description: 'Jeton d''authentification invalide'
+        '403':
+          description: 'L''accès à cette page ne vous est pas autorisé'
+      security:
+        -
+          scalar: bearer
+  '/customers/{id}':
+    get:
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'ID du client'
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: 'Détails du client'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Customer'
+        '404':
+          description: 'La ressource n''existe pas'
+        '401':
+          description: 'Jeton d''authentification invalide'
+        '403':
+          description: 'L''accès à cette page ne vous est pas autorisé'
+      security:
+        -
+          scalar: bearer
+  '/phones/{id}':
+    get:
+      parameters:
+        -
+          name: id
+          in: path
+          description: 'ID du mobile'
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: 'Détails d''un mobile'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Phone'
+        '404':
+          description: 'Le mobile n''existe pas'
+        '401':
+          description: 'Jeton d''authentification invalide'
+      security:
+        -
+          scalar: bearer
+  /phones:
+    get:
+      responses:
+        '200':
+          description: 'Liste des mobiles'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Phone'
+        '404':
+          description: 'Le mobile n''existe pas'
+        '401':
+          description: 'Jeton d''authentification invalide'
+        '403':
+          description: 'L''accès à cette page ne vous est pas autorisé'
 components:
+  schemas:
+    Customer:
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        email:
+          type: string
+        password:
+          type: string
+        phones:
+          type: string
+      type: object
+    Phone:
+      properties:
+        id:
+          type: integer
+        brand:
+          type: string
+        name:
+          type: string
+        price:
+          type: integer
+        description:
+          type: string
+        color:
+          type: string
+      type: object
+    User:
+      properties:
+        id:
+          type: integer
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+      type: object
   securitySchemes:
     bearer:
       type: apiKey
